# links-tgbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TZ.md  TZ_CHANNELS.md  docker-compose.nginx.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: changelog.py  deps.py  export.py  export_channels.py  main.py  templates_env.py
api/routes/: account.py  ask.py  auth.py  channels.py  collections.py  links.py  posts.py  research.py  workspace.py
api/templates/: _ask_result.html  _link_card.html  _link_card_edit.html  _link_detail_edit.html  _link_detail_view.html  _links_list.html  _post_row.html  _posts_list.html  _research_status.html  _similar_links.html  account.html  base.html  changelog.html  collections.html  daily_digest.html  digest.html  digest_detail.html  index.html  link.html  login.html  posts.html  (+1 more)
bot/: access.py  extractors.py  formatting.py  ingest.py  keyboards.py  main.py  post_capture.py  states.py
db/: alembic.ini  models.py  session.py
nginx/: bnblinks.conf  nginx.conf
scripts/: backfill_area_usefulness.py  backfill_post_embeddings.py  inspect_posts.py  run_bot_dev.sh  seed_fake_data.py
shared/: attribution.py  config.py  redact.py  tag_normalizer.py  telegram_auth.py  telegram_throttle.py  url_normalizer.py  workspace.py
tests/: conftest.py
worker/: channel_scraper.py  chat.py  collections.py  embeddings.py  fetcher.py  llm.py  posts.py  priority.py  rag.py  search.py  stylometry.py  tasks.py  voice_dna.py  voice_dna_charts.py  voice_dna_models.py  voice_dna_prompts.py
(+91 files in other folders)
